<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.dashboard.terbaru.TerbaruFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_new_last_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_update"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:padding="5dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_new_last_update">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_new_magnitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="24dp"
                    android:text="@string/example_magnitude"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="56sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_new_label_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text=" Lokasi Pusat Gempa"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_baseline_location_on_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <TextView
            android:id="@+id/tv_new_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:paddingBottom="16dp"
            android:text="lokasi"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_new_label_location"
            app:layout_constraintTop_toBottomOf="@+id/tv_new_label_location" />

        <TextView
            android:id="@+id/tv_new_label_datetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Tanggal dan Waktu"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_baseline_calendar_today_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_new_location" />

        <TextView
            android:id="@+id/tv_new_datetime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:paddingBottom="16dp"
            android:text="Tanggal dan Waktu"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_new_label_datetime"
            app:layout_constraintTop_toBottomOf="@+id/tv_new_label_datetime" />

        <TextView
            android:id="@+id/tv_new_label_depth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Kedalaman"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_baseline_arrow_downward_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_new_datetime" />

        <TextView
            android:id="@+id/tv_new_depth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:paddingBottom="16dp"
            android:text="kedalaman"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_new_label_depth"
            app:layout_constraintTop_toBottomOf="@+id/tv_new_label_depth" />

        <TextView
            android:id="@+id/tv_new_label_feels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Dirasakan di daerah"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_baseline_info_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_new_depth" />

        <TextView
            android:id="@+id/tv_new_feels"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:paddingBottom="16dp"
            android:text="dirasakan"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_new_label_feels"
            app:layout_constraintTop_toBottomOf="@+id/tv_new_label_feels" />

        <TextView
            android:id="@+id/tv_new_label_potency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Potensi"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_baseline_graphic_eq_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_new_feels" />

        <TextView
            android:id="@+id/tv_new_potency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:paddingBottom="16dp"
            android:text="potensi"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_new_label_potency"
            app:layout_constraintTop_toBottomOf="@+id/tv_new_label_potency" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_show_shake_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="36dp"
            android:padding="16dp"
            android:text="Lihat Shakemap"
            android:transitionName="shakemap"
            app:cornerRadius="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_new_potency" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>