<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="180dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.cardview.widget.CardView
        android:layout_width="64dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="8dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Magnitudo"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/tv_details_magnitude"
                app:layout_constraintEnd_toEndOf="@+id/tv_details_magnitude"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_details_magnitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5.3SR"
                android:textColor="?android:textColorPrimary"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_label_date_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text=" Tanggal dan Waktu"
                android:textColor="?android:textColorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_baseline_access_time_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_details_magnitude"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_details_date_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:text="13 Des 2021 12:46:56 WIB"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/tv_label_date_time"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_date_time" />

            <TextView
                android:id="@+id/tv_label_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text=" Lokasi Pusat Gempa"
                android:textColor="?android:textColorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_baseline_location_on_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_details_magnitude"
                app:layout_constraintTop_toBottomOf="@id/tv_details_date_time" />

            <TextView
                android:id="@+id/tv_details_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:text="Pusat gempa berada di laut 179 km Tenggara Jember"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/tv_label_location"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_location" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_label_coordinate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=" Titik Koordinat"
                android:textColor="?android:textColorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_baseline_my_location_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_details_coordinate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:text="9.81 LS, 113.67 BT"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_label_coordinate"
                app:layout_constraintStart_toStartOf="@+id/tv_label_coordinate"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_coordinate" />

            <TextView
                android:id="@+id/tv_label_depth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text=" Kedalaman"
                android:textColor="?android:textColorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_baseline_arrow_downward_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_details_coordinate" />

            <TextView
                android:id="@+id/tv_details_depth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:text="10 km"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_label_depth"
                app:layout_constraintStart_toStartOf="@+id/tv_label_depth"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_depth" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_feel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_label_feel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=" Dirasakan di daerah"
                android:textColor="?android:textColorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_baseline_info_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_details_feel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:text="III Kuta, II Denpasar, II Kuta Utara, II Karangasem, II Pacitan, II Trenggalek, II Lumajang"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_label_feel"
                app:layout_constraintStart_toStartOf="@+id/tv_label_feel"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_feel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_potency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_label_potency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=" Potensi"
                android:textColor="?android:textColorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_baseline_graphic_eq_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_details_potency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:text="Gempa ini dirasakan untuk diteruskan pada masyarakat"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_label_potency"
                app:layout_constraintStart_toStartOf="@+id/tv_label_potency"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_potency" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>