<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation"
    app:startDestination="@id/nav_terbaru">

    <fragment
        android:id="@+id/nav_terbaru"
        android:name="com.example.quaketodayid.ui.main.dashboard.terbaru.TerbaruFragment"
        tools:layout="@layout/fragment_terbaru" />
    <fragment
        android:id="@+id/nav_terkini"
        android:name="com.example.quaketodayid.ui.main.dashboard.terkini.TerkiniFragment"
        tools:layout="@layout/fragment_terkini" />

    <fragment
        android:id="@+id/nav_dirasakan"
        android:name="com.example.quaketodayid.ui.main.dashboard.dirasakan.DirasakanFragment"
        tools:layout="@layout/fragment_dirasakan" />

</navigation>