<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.quaketodayid.ui.main.dashboard.DashboardFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.quaketodayid.ui.main.setting.SettingFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.quaketodayid.ui.main.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

    <action
        android:id="@+id/action_global_setting"
        app:destination="@id/nav_settings" />
</navigation>